Heart on Stitch!

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<H1>Welcome to Stitch's Fanpage!</H1>
-	<h2>Goja Jabaga Honchizee! - Stitch</h2>
+<h1>Welcome to Stitch's Fanpage!</h1>
+<h2>Goja Jabaga Honchizee! - Stitch &lt;3</h2>
 	<p>This website contains the <em>glorious</em> fandom admiration of our love, <strong>STITCH!</strong> <br>On this website, you can find much lovely content to worship him and his glory!
 	</p>
 	<br>
