--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <h1>Welcome to Stitch's Fanpage!</h1>
 <h2>Goja Jabaga Honchizee! - Stitch &lt;3</h2>
+<h3>My name is Wouter</h3>
 	<p>This website contains the <em>glorious</em> fandom admiration of our love, <strong>STITCH!</strong> <br>On this website, you can find much lovely content to worship him and his glory!
 	</p>
 	<br>
