--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <img src="images/stitch.jpeg" height="600" alt="A photo of our god, STITCH">
 
 <h3 class="title-segment">Stitch's journey</h3>
-	<div id="list-border">
-	<p id="exception">
+	<div class="list-border">
+	<p id="paragraph-journey">
 		After Wouter and Renske welcomed Stitch into their lives, they took him through Venice, and showed him the city. He flew over Piazza San Marco, sailed through the Canal Grande, and took the bus to 'Anda Venice Hostel'. But that was merely the beginning of Stitch's journey. On August 7th 2020, Wouter took Stitch as his hand luggage in the flight to The Netherlands. Wouter and Renske took Stitch with them everywhere they could, and he visited several beautiful places already. He has visited the following cities:
 		<ul>
 			<li>Venice</li>
@@ -42,6 +42,8 @@
 		If you'd like to know more about the owners of this website, go to <a href="https://www.buas.nl">this website</a>
 	</p>
 	</div>
+	
+	
 	
 <h3 class="title-segment">Media</h3>
 	<video width="200" height="320" controls src="videos/stitch-venice.mp4" alt="video of stitch!">
