--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
 	<title>Stitch's Fanpage</title>
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" href="css/styles.css"/>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans"/>
 </head>
 	
 <body>
 <h1 class="introduction">Welcome to Stitch's Fanpage!</h1>
 <h3 class="title-segment">Introduction</h3>
-	<p class=paragraph>
+	<p class="paragraph">
 		This website contains the glorious fandom admiration of our love, <strong>STITCH!</strong> On this website, you can find much lovely content to worship him and his glory!
 	</p>
 	
 <h3 class="title-segment">About Stitch</h3>
-	<p class=paragraph>
+	<p class="paragraph">
 		Stitch was born into a massive factory in China. He was made out of completely new polyester fibers, polyurethane foam, andpolyethylene pellets. He was shipped from the factory to the Disney Store in a city called 'Venice' in Italy, with all his new brothers. He was completely ready to explore the world, and find a humble owner to take care for him. But sadly, time passed more than Stitch could've imagined. He saw his brothers sell out rapidly, while he patiently awaited his future owner. But one day, Stitch had a very bad day. A shipment containing tons of new Stitch brothers arived, ready to be sold. Stitch realized, he was the last brother that was left of his shipment! Sad and lost from hope, the only thing he could do was to keep waiting for a new owner. 
 		
 		<br><br>Stitch never knew his parents, because he never had any. But that would change one day... On the 5th of August 2020, a couple entered the Disney Store, and immediately walked towards Stitch. There was something special about the couple. They didn't seem to be local citizens, in fact, they were talking in Dutch! Stitch had a very rough day, a couple of his newely shipped brothers were sold that day. He looked sad, and made clear eye contact with the Dutch couple. "Oh kijk lieverd deze is zo leuk!!!" said the Dutch girl. Stitch couldn't understand a thing they were saying. All the studden, Stitch got lifted by the Dutch girl, which scared him for a little. "Dat gaat toch niet lieverd, hoe gaan we die in godsnaam meenemen in het vliegtuig?" said the Dutch boy. Stitch still didn't understand a single thing the couple were saying. "Jawel joh, dat zien we later wel!". The Dutch boy sighed, and the girl took Stitch with her to the checkout. From this moment, Stitch realized it all. He finally found his new owners! Once the three came out of the Disney Store, the Dutch couple introduced themselves to Stitch. They were called 'Wouter' and 'Renske'. And so... Stitch his journey has begun...
