Added dummy text

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	
 <body>
 <h1 class="introduction">Welcome to Stitch's Fanpage!</h1>
+<h4 class="introduction">(dummy text can be found at the bottom)</h4>
 <h3 class="title-segment">Introduction</h3>
 	<p class="paragraph">
 		This website contains the glorious fandom admiration of our love, <strong>STITCH!</strong> On this website, you can find much lovely content to worship him and his glory!
@@ -51,11 +52,16 @@
 		Your browser does not support the video tag.
 	</video>
 	
+
+<h3 class="title-segment">Dummy Text</h3>
+	<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor risus vitae imperdiet viverra. Fusce eu finibus diam, vitae eleifend velit. Curabitur cursus, tellus vel volutpat porta, mi lectus pretium lorem, id rutrum augue lectus id dui. Praesent eu tincidunt odio. Cras id tortor a ipsum bibendum aliquet vel ut lacus. Nunc magna erat, pulvinar eleifend est porttitor, fringilla efficitur arcu. In convallis lectus quis placerat pharetra. Aliquam dignissim blandit turpis, et molestie elit malesuada aliquam. Sed volutpat arcu vitae tristique mollis.</p>
 <br>
+	
 <div class="misc">
 <h4>Miscelaneous</h4>	
 	<p>
-		My name is Wouter
+		Every paragraph uses a class tag, as otherwise I couldn't put the list at 'Stitch's journey' in the same box.
+		<br>My name is Wouter
 		<br>Arie was here
 		<br>The above is an intruder alert
 	</p>
