Added id in CSS styles

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor risus vitae imperdiet viverra. Fusce eu finibus diam, vitae eleifend velit. Curabitur cursus, tellus vel volutpat porta, mi lectus pretium lorem, id rutrum augue lectus id dui. Praesent eu tincidunt odio. Cras id tortor a ipsum bibendum aliquet vel ut lacus. Nunc magna erat, pulvinar eleifend est porttitor, fringilla efficitur arcu. In convallis lectus quis placerat pharetra. Aliquam dignissim blandit turpis, et molestie elit malesuada aliquam. Sed volutpat arcu vitae tristique mollis.</p>
 <br>
 	
-<div class="misc">
+<div id="misc">
 <h4>Miscelaneous</h4>	
 	<p>
 		Every paragraph uses a class tag, as otherwise I couldn't put the list at 'Stitch's journey' in the same box.
