Fixed index.html errors, adjusted some layout features, added 1st advanced CSS techniques

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<title>Stitch's Fanpage</title>
@@ -9,53 +9,66 @@
 </head>
 	
 <body>
+<header>
 <h1 class="introduction">Welcome to Stitch's Fanpage!</h1>
 <h4 class="introduction">(dummy text can be found at the bottom)</h4>
-<h3 class="title-segment">Introduction</h3>
+</header>
+
+<h3 class="title">Introduction</h3>
 	<p class="paragraph">
 		This website contains the glorious fandom admiration of our love, <strong>STITCH!</strong> On this website, you can find much lovely content to worship him and his glory!
 	</p>
 	
-<h3 class="title-segment">About Stitch</h3>
-	<p class="paragraph">
-		Stitch was born into a massive factory in China. He was made out of completely new polyester fibers, polyurethane foam, andpolyethylene pellets. He was shipped from the factory to the Disney Store in a city called 'Venice' in Italy, with all his new brothers. He was completely ready to explore the world, and find a humble owner to take care for him. But sadly, time passed more than Stitch could've imagined. He saw his brothers sell out rapidly, while he patiently awaited his future owner. But one day, Stitch had a very bad day. A shipment containing tons of new Stitch brothers arived, ready to be sold. Stitch realized, he was the last brother that was left of his shipment! Sad and lost from hope, the only thing he could do was to keep waiting for a new owner. 
+<h3 class="title">About Stitch</h3>
+	<div class="paragraph" id="box">
+		<div class="column">
+		<img id="image" src="images/stitch.jpeg" alt="A photo of our god, STITCH">
+		</div>
+			<div class="column">
+			<p>
+			Stitch was born into a massive factory in China. He was made out of completely new polyester fibers, polyurethane foam, andpolyethylene pellets. He was shipped from the factory to the Disney Store in a city called 'Venice' in Italy, with all his new brothers. He was completely ready to explore the world, and find a humble owner to take care for him. But sadly, time passed more than Stitch could've imagined. He saw his brothers sell out rapidly, while he patiently awaited his future owner. But one day, Stitch had a very bad day. A shipment containing tons of new Stitch brothers arived, ready to be sold. Stitch realized, he was the last brother that was left of his shipment! Sad and lost from hope, the only thing he could do was to keep waiting for a new owner.
 		
-		<br><br>Stitch never knew his parents, because he never had any. But that would change one day... On the 5th of August 2020, a couple entered the Disney Store, and immediately walked towards Stitch. There was something special about the couple. They didn't seem to be local citizens, in fact, they were talking in Dutch! Stitch had a very rough day, a couple of his newely shipped brothers were sold that day. He looked sad, and made clear eye contact with the Dutch couple. "Oh kijk lieverd deze is zo leuk!!!" said the Dutch girl. Stitch couldn't understand a thing they were saying. All the studden, Stitch got lifted by the Dutch girl, which scared him for a little. "Dat gaat toch niet lieverd, hoe gaan we die in godsnaam meenemen in het vliegtuig?" said the Dutch boy. Stitch still didn't understand a single thing the couple were saying. "Jawel joh, dat zien we later wel!". The Dutch boy sighed, and the girl took Stitch with her to the checkout. From this moment, Stitch realized it all. He finally found his new owners! Once the three came out of the Disney Store, the Dutch couple introduced themselves to Stitch. They were called 'Wouter' and 'Renske'. And so... Stitch his journey has begun...
-	</p>
+			<br><br>Stitch never knew his parents, because he never had any. But that would change one day... On the 5th of August 2020, a couple entered the Disney Store, and immediately walked towards Stitch. There was something special about the couple. They didn't seem to be local citizens, in fact, they were talking in Dutch! Stitch had a very rough day, a couple of his newely shipped brothers were sold that day. He looked sad, and made clear eye contact with the Dutch couple. "Oh kijk lieverd deze is zo leuk!!!" said the Dutch girl. Stitch couldn't understand a thing they were saying. All the studden, Stitch got lifted by the Dutch girl, which scared him for a little. "Dat gaat toch niet lieverd, hoe gaan we die in godsnaam meenemen in het vliegtuig?" said the Dutch boy. Stitch still didn't understand a single thing the couple were saying. "Jawel joh, dat zien we later wel!". The Dutch boy sighed, and the girl took Stitch with her to the checkout. From this moment, Stitch realized it all. He finally found his new owners! Once the three came out of the Disney Store, the Dutch couple introduced themselves to Stitch. They were called 'Wouter' and 'Renske'. And so... Stitch his journey has begun...
+			</p>
+			</div>
+	</div>	
+	
 
-	<br>
-<img src="images/stitch.jpeg" height="600" alt="A photo of our god, STITCH">
-
-<h3 class="title-segment">Stitch's journey</h3>
+<h3 class="title">Stitch's journey</h3>
 	<div class="list-border">
 	<p>
 		After Wouter and Renske welcomed Stitch into their lives, they took him through Venice, and showed him the city. He flew over Piazza San Marco, sailed through the Canal Grande, and took the bus to 'Anda Venice Hostel'. But that was merely the beginning of Stitch's journey. On August 7th 2020, Wouter took Stitch as his hand luggage in the flight to The Netherlands. Wouter and Renske took Stitch with them everywhere they could, and he visited several beautiful places already. He has visited the following cities:
-		<ul>
-			<li>Venice</li>
-			<li>Amsterdam Schiphol</li>
-			<li>Gilze</li>
-			<li>Dongen</li>
-			<li>Rijen</li>
-			<li>Ommel</li>
-			<li>Noordwijk Aan Zee</li>
-		</ul>
+		<br>
+		<br>
+			<ul>
+				<li>Venice</li>
+				<li>Amsterdam Schiphol</li>
+				<li>Gilze</li>
+				<li>Dongen</li>
+				<li>Rijen</li>
+				<li>Ommel</li>
+				<li>Noordwijk Aan Zee</li>
+				<li>Voorschoten</li>
+			</ul>
+		<br>
 		And he will travel to many more cities in the future!
-		<br><br>
+		<br>
+		<br>
 		If you'd like to know more about the owners of this website, go to <a href="https://www.buas.nl">this website</a>
 	</p>
 	</div>
 	
 	
 	
-<h3 class="title-segment">Media</h3>
-	<video width="200" height="320" controls src="videos/stitch-venice.mp4" alt="video of stitch!">
+<h3 class="title">Media</h3>
+	<div>
+		<video class="video-border" width="200" height="356" controls src="videos/stitch-venice.mp4">
 		Your browser does not support the video tag.
-	</video>
-	
+		</video>
+	</div>
 
-<h3 class="title-segment">Dummy Text</h3>
+<h3 class="title">Dummy Text</h3>
 	<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor risus vitae imperdiet viverra. Fusce eu finibus diam, vitae eleifend velit. Curabitur cursus, tellus vel volutpat porta, mi lectus pretium lorem, id rutrum augue lectus id dui. Praesent eu tincidunt odio. Cras id tortor a ipsum bibendum aliquet vel ut lacus. Nunc magna erat, pulvinar eleifend est porttitor, fringilla efficitur arcu. In convallis lectus quis placerat pharetra. Aliquam dignissim blandit turpis, et molestie elit malesuada aliquam. Sed volutpat arcu vitae tristique mollis.</p>
-<br>
 	
 <div id="misc">
 <h4>Miscelaneous</h4>	
@@ -66,7 +79,6 @@
 		<br>The above is an intruder alert
 	</p>
 </div>
-
 
 
 </body>
