--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	<div class="list-border">
 	<p>
 		After Wouter and Renske welcomed Stitch into their lives, they took him through Venice, and showed him the city. He flew over Piazza San Marco, sailed through the Canal Grande, and took the bus to 'Anda Venice Hostel'. But that was merely the beginning of Stitch's journey. On August 7th 2020, Wouter took Stitch as his hand luggage in the flight to The Netherlands. Wouter and Renske took Stitch with them everywhere they could, and he visited several beautiful places already. He has visited the following cities:
+	</p>
 		<br>
 		<br>
 			<ul>
@@ -51,20 +52,25 @@
 				<li>Voorschoten</li>
 			</ul>
 		<br>
+	<p>	
 		And he will travel to many more cities in the future!
 		<br>
 		<br>
-		If you'd like to know more about the owners of this website, go to <a href="https://www.buas.nl">this website</a>
+	</p>
+	<p>
+			If you'd like to know more about the owners of this website, go to <a href="https://www.buas.nl">this website</a>
 	</p>
 	</div>
 	
 	
 	
 <h3 class="title">Media</h3>
-	<div>
-		<video class="video-border" width="200" height="356" controls src="videos/stitch-venice.mp4">
-		Your browser does not support the video tag.
-		</video>
+	<div class="box">
+		<div class="column">
+			<video class="video-border" width="200" height="356" controls src="videos/stitch-venice.mp4">
+			Your browser does not support the video tag.
+			</video>
+		</div>
 	</div>
 
 <h3 class="title">Dummy Text</h3>
